[tool.poetry]
name = "rosalind-python"
version = "0.1.0"
description = ""
authors = ["Meng Zhao <shizhaojingszj@163.com>"]

[tool.poetry.dependencies]
python = "^3.9"
glom = "^22.1.0"
typer = "^0.5.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
